operator-deploy/sas-bases/overlays/network/istio/components/sas-data-mining-results/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-data-mining-results
spec:
  host: sas-data-mining-results
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /dataMiningResults/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-data-mining-warehouse
spec:
  host: sas-data-mining-warehouse
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /dataMiningWarehouse/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-results
    sas.com/admin: namespace
  name: sas-data-mining-results
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataMiningResults
    - uri:
        prefix: /dataMiningResults/
    route:
    - destination:
        host: sas-data-mining-results
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-mining-warehouse
    sas.com/admin: namespace
  name: sas-data-mining-warehouse
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataMiningWarehouse
    - uri:
        prefix: /dataMiningWarehouse/
    route:
    - destination:
        host: sas-data-mining-warehouse
    timeout: 300s
